# svelte-socket-duckdb

./: README.md  docker-compose.yml  haproxy.cfg
.github/workflows/: main.yml
cicd/: docker-compose.yml
flask-app/: .env.development  .env.production  .env.test  .env.testing  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.py  docker-compose.yml  entrypoint.sh  pyproject.toml  run.py
flask-app/app/: __init__.py  celery.py
flask-app/app/models/: product.py
flask-app/app/routes/: __init__.py  views.py
flask-app/app/services/: database.py
flask-app/app/sockets/: __init__.py  events.py
flask-app/data/: database.db  database.db?access_mode=READ_WRITE
flask-app/scripts/: seed_db.py
flask-app/tests/: conftest.py  test_database.db  test_database.py  test_routes.py  test_sockets.py  testdatabase.db
flask-server/: .gitignore  Dockerfile  app.py  create-db.py  data.csv  data.db  pyproject.toml  requirements.txt  test_app.py
flask-server/cicd/: Dockerfile
flask-server/src/: config.py  database.py  events.py  routes.py
flask-server/tests/: test_app.py
haproxy/: haproxy.cfg
socket-server/: DockerFile  docker-compose.yml
socket-server/app/: server.py
svelte-app/: Dockerfile  _Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js
svelte-app/cicd/: DockerFile
svelte-app/src/routes/: +page.svelte
svelte-app/src/store/: tableStore.js
