[tool.poetry]
name = "flask-app"
version = "0.1.0"
description = ""
authors = ["bhattjaldhi <bhattjaldhi27@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
python-dotenv = "^1.0.1"
flask-socketio = "^5.3.7"
duckdb = "^1.1.1"
flask-pydantic = "^0.12.0"
pytest = "^8.3.3"
pytest-flask = "^1.3.0"
pytest-cov = "^5.0.0"
gunicorn = "^23.0.0"
eventlet = "^0.37.0"
celery = {extras = ["redis"], version = "^5.4.0"}


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.8.0"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''