[tool.poetry]
name = "flask-server"
version = "0.1.0"
description = ""
authors = ["bhattjaldhi <bhattjaldhi27@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bidict = "0.23.1"
blinker = "1.8.2"
click = "8.1.7"
duckdb = "1.1.0"
flask = "3.0.3"
flask-cors = "5.0.0"
flask-socketio = "5.3.7"
h11 = "0.14.0"
importlib-metadata = "8.5.0"
itsdangerous = "2.2.0"
jinja2 = "3.1.4"
markupsafe = "2.1.5"
numpy = "2.0.2"
pandas = "2.2.2"
python-dateutil = "2.9.0.post0"
python-engineio = "4.9.1"
python-socketio = "5.11.4"
pytz = "2024.2"
simple-websocket = "1.0.0"
six = "1.16.0"
tzdata = "2024.1"
werkzeug = "3.0.4"
wsproto = "1.2.0"
zipp = "3.20.1"
eventlet = "^0.37.0"
gunicorn = "^23.0.0"
redis = "^5.0.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-flask = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
